--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "chart.js": "^3.5.1",
     "express": "^4.17.1",
     "next": "10.2.3",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.1",
     "sass": "^1.34.0"
   }
 }
